@@ -8,6 +8,7 @@ import io.cucumber.core.feature.GluePath;
 import io.cucumber.core.snippets.SnippetType;
 import io.cucumber.tagexpressions.TagExpressionException;
 import io.cucumber.tagexpressions.TagExpressionParser;
+import org.jspecify.annotations.Nullable;
 
 import java.util.regex.Pattern;
 
@@ -18,7 +19,7 @@ public final class CucumberOptionsAnnotationParser {
 
     private boolean featuresSpecified = false;
     private boolean overridingGlueSpecified = false;
-    private OptionsProvider optionsProvider;
+    private @Nullable OptionsProvider optionsProvider;
 
     public CucumberOptionsAnnotationParser withOptionsProvider(OptionsProvider optionsProvider) {
         this.optionsProvider = optionsProvider;
@@ -74,7 +75,7 @@ public final class CucumberOptionsAnnotationParser {
             try {
                 args.addTagFilter(TagExpressionParser.parse(tagExpression));
             } catch (TagExpressionException tee) {
-                throw new IllegalArgumentException(String.format("Invalid tag expression at '%s'", clazz.getName()),
+                throw new IllegalArgumentException("Invalid tag expression at '%s'".formatted(clazz.getName()),
                     tee);
             }
         }
@@ -128,7 +129,7 @@ public final class CucumberOptionsAnnotationParser {
     }
 
     private void addFeatures(CucumberOptions options, RuntimeOptionsBuilder args) {
-        if (options != null && options.features().length != 0) {
+        if (options.features().length != 0) {
             for (String feature : options.features()) {
                 FeatureWithLinesOrRerunPath parsed = FeatureWithLinesOrRerunPath.parse(feature);
                 parsed.getFeaturesToRerun().ifPresent(args::addRerun);
@@ -181,6 +182,7 @@ public final class CucumberOptionsAnnotationParser {
 
     public interface OptionsProvider {
 
+        @Nullable
         CucumberOptions getOptions(Class<?> clazz);
 
     }
@@ -207,8 +209,10 @@ public final class CucumberOptionsAnnotationParser {
 
         SnippetType snippets();
 
+        @Nullable
         Class<? extends ObjectFactory> objectFactory();
 
+        @Nullable
         Class<? extends UuidGenerator> uuidGenerator();
 
     }
