@@ -14,7 +14,7 @@ import java.util.List;
 /**
  * Listener that makes sure Cucumber fires events in the right order
  */
-public class SanityChecker implements TestListener {
+final class SanityChecker implements TestListener {
 
     private static final String INDENT = "  ";
     private static final String INSANITY = "INSANITY";
@@ -63,7 +63,10 @@ public class SanityChecker implements TestListener {
             out.append("END   ").append(ended.toString()).append("\n");
             if (!lastStarted.toString().equals(ended.toString())) {
                 out.append(INSANITY).append("\n");
-                String errorMessage = String.format("Started : %s\nEnded   : %s\n", lastStarted, ended);
+                String errorMessage = """
+                        Started : %s
+                        Ended   : %s
+                        """.formatted(lastStarted, ended);
                 out.append(errorMessage).append("\n");
             }
         } catch (Exception e) {
